--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,8 +14,8 @@ release:
   # Default is extracted from the origin remote URL or empty if its private hosted.
   # Note: it can only be one: either github or gitlab or gitea
   github:
-    owner: timothystiles
-    name: poly
+    owner: koeng101
+    name: dnadesign
 
   # IDs of the archives to use.
   # Defaults to all.
