--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: 1.21
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Generate coverage report
-        run: go test -v  -coverprofile=profile.cov ./...
+        run: go test -v  -coverprofile=profile.cov ./lib/...
       - name: Parse overall coverage
         run: coverage=$(go tool cover -func profile.cov | tail -1 | rev | cut -f 1 | rev) && echo "COVERAGE=$coverage" >> $GITHUB_ENV 
       - name: Create the Badge
