--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Setup OpenBSD VM
+    - name: Run OpenBSD tests
       uses: vmactions/openbsd-vm@v1
       with:
         prepare: |
@@ -38,9 +38,4 @@ jobs:
           export PATH=$PATH:/usr/local/go/bin
           go version
           go install golang.org/x/tools/cmd/goimports@latest
-    - name: Run tests in OpenBSD
-      run: | 
-        export PATH=$PATH:/usr/local/go/bin
-        go version
-        go test -v ./lib/...
-
+          go test -v ./lib/...
