--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       run: go test -v ./lib/...
   openbsd-test:
     runs-on: ubuntu-latest
-    name: Tests on OpenBSD
+    name: 1.21.5 openbsd
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -36,9 +36,7 @@ jobs:
           curl -L https://dl.google.com/go/go1.21.5.openbsd-amd64.tar.gz -o go1.21.5.openbsd-amd64.tar.gz
           tar -C /usr/local -xzf go1.21.5.openbsd-amd64.tar.gz
           export PATH=$PATH:/usr/local/go/bin
-          go version
           go install golang.org/x/tools/cmd/goimports@latest
         run: |
           export PATH=$PATH:/usr/local/go/bin
-          ls -a
           go test -v ./lib/...
