--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Download minimap2
-      run: curl -L https://github.com/lh3/minimap2/releases/download/v2.26/minimap2-2.26_x64-linux.tar.bz2 | tar -jxvf - && cp ./minimap2-2.26_x64-linux/minimap2 /bin/minimap2
+      run: |
+        curl -L https://github.com/lh3/minimap2/releases/download/v2.26/minimap2-2.26_x64-linux.tar.bz2 | tar -jxvf -
+        mkdir -p $HOME/bin
+        cp ./minimap2-2.26_x64-linux/minimap2 $HOME/bin
+        echo "$HOME/bin" >> $GITHUB_PATH
     - name: Test external
       run: go test -v ./external/...
   openbsd-test:
