--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,11 @@ jobs:
     - name: Test
       run: go test -v ./lib/...
   test-external:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.21.x,]
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
     - name: Install Go
       uses: actions/setup-go@v2
