--- a/.github/workflows/deployment_test.yml
+++ b/.github/workflows/deployment_test.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Test Deployments
-      run: go test -v ./deployment/...
+      run: go test -v ./api/...
