--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,11 @@
-FROM golang:1.21 AS builder
+FROM golang:1.22 AS builder
 WORKDIR /app
 
 # Copy the go source
 COPY . .
 
 # Download Go modules
-RUN go mod download
+RUN cd api && go mod download && cd ..
 
 # Build the Go app
 RUN GOOS=linux go build -o dnadesignapi api/main.go
@@ -18,4 +18,3 @@ COPY --from=builder /app/dnadesignapi .
 
 # Command to run the executable
 ENTRYPOINT ["./dnadesignapi"]
-
