--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,10 +41,10 @@ jobs:
         mkdir -p $HOME/bin
         cp ./minimap2-2.26_x64-linux/minimap2 $HOME/bin
         echo "$HOME/bin" >> $GITHUB_PATH
-    - name: Install dependencies for samtools
+    - name: Install dependencies for samtools and bcftools
       run: |
         sudo apt-get update
-        sudo apt-get install -y libncurses5-dev libbz2-dev liblzma-dev zlib1g-dev
+        sudo apt-get install -y libncurses5-dev libbz2-dev liblzma-dev zlib1g-dev libcurl4-openssl-dev
     - name: Download and install samtools
       run: |
         curl -L https://github.com/samtools/samtools/releases/download/1.13/samtools-1.13.tar.bz2 | tar -jxvf -
@@ -55,7 +55,6 @@ jobs:
         echo "$HOME/samtools/bin" >> $GITHUB_PATH
     - name: Download and install bcftools
       run: |
-        sudo apt-get install -y libcurl4-gnutls-dev libcurl4-nss-dev libcurl4-openssl-dev
         git clone --recurse-submodules https://github.com/samtools/htslib.git
         git clone https://github.com/samtools/bcftools.git
         cd bcftools
