--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,9 @@ jobs:
         elif [ "${{ runner.os }}" = "macOS" ]; then
           SDK_PATH=$(xcrun --show-sdk-path)
           if [ "${{ matrix.arch }}" = "arm64" ]; then
-            CC="zig cc -target aarch64-macos -isysroot $SDK_PATH" CGO_ENABLED=1 GOOS=darwin GOARCH=arm64 go build -o dnadesign/libdnadesign.dylib -buildmode=c-shared lib.go
+            CGO_ENABLED=1 GOOS=darwin GOARCH=arm64 go build -o dnadesign/libdnadesign.dylib -buildmode=c-shared lib.go
           else
-            CC="zig cc -target x86_64-macos -isysroot $SDK_PATH" CGO_ENABLED=1 GOOS=darwin GOARCH=amd64 go build -o dnadesign/libdnadesign.dylib -buildmode=c-shared lib.go
+            CGO_ENABLED=1 GOOS=darwin GOARCH=amd64 go build -o dnadesign/libdnadesign.dylib -buildmode=c-shared lib.go
           fi
         fi
       env:
