--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,7 +79,7 @@ jobs:
         python -m venv test_env
         source test_env/bin/activate
         pip install ./py/dist/*.whl
-        python -c "from dnadesign import fasta_parser; print('Library loaded successfully')"
+        #python -c "from dnadesign import fasta_parser; print('Library loaded successfully')"
         pip install pytest
         pytest ./py/tests -v
 
